New Session endpoints added,unit test added, swagger added and more